Working JWT and all requests
