# internal/model/user.go
@@ -5,7 +5,7 @@ import (
 )
 
 type User struct {
-	ID           int64      `db:"person_id" json:"person_id"`
+	ID           int64      `db:"user_id" json:"user_id"`
 	Username     string     `db:"username" json:"username"`
 	Email        string     `db:"email" json:"email"`
 	Password     string     `db:"password" json:"password"`
